Quick fix to wrapping

--- a/src/styles/food-label.less
+++ b/src/styles/food-label.less
@@ -90,6 +90,10 @@ DEALINGS IN THE SOFTWARE.
   white-space: nowrap;
 }
 
+.performance-facts__table td {
+  white-space: unset;
+}
+
 .performance-facts__table td:last-child,
 .performance-facts__table--small td:last-child,
 .performance-facts__table--grid td:last-child {
